--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lodash": "^4.16.6",
     "moment": "^2.16.0",
     "react": "15.3.2",
-    "react-native": "0.36.0"
+    "react-native": "0.36.0",
+    "react-native-button": "^1.7.1",
+    "react-native-config": "^0.1.2",
+    "react-native-hr": "^1.1.3"
   },
   "jest": {
     "preset": "jest-react-native"
