--- a/ios/BraidMobile/Info.plist
+++ b/ios/BraidMobile/Info.plist
@@ -12,6 +12,8 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>Braid</string>
+	<key>CFBundleDisplayName</key>
+	<string>Braid</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
