--- a/ios/BraidMobile/BraidMobile.entitlements
+++ b/ios/BraidMobile/BraidMobile.entitlements
@@ -4,5 +4,9 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.tyler.Braid</string>
+	</array>
 </dict>
 </plist>
