--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native": "0.36.0",
     "react-native-button": "^1.7.1",
     "react-native-config": "^0.1.2",
-    "react-native-hr": "^1.1.3"
+    "react-native-hr": "^1.1.3",
+    "react-native-keychain": "^0.3.2"
   },
   "jest": {
     "preset": "jest-react-native"
