--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-button": "^1.7.1",
     "react-native-config": "^0.1.2",
     "react-native-hr": "^1.1.3",
-    "react-native-keychain": "^0.3.2"
+    "react-native-keychain": "^0.3.2",
+    "react-native-vector-icons": "^3.0.0"
   },
   "jest": {
     "preset": "jest-react-native"
