--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "lodash": "^4.16.6",
     "react": "15.3.2",
-    "react-native": "0.36.0",
+    "react-native": "^0.39.1",
     "react-native-button": "^1.7.1",
     "react-native-config": "^0.1.2",
     "react-native-hr": "^1.1.3",
