--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-native-vector-icons": "^3.0.0"
   },
   "jest": {
-    "preset": "jest-react-native"
+    "preset": "react-native"
   },
   "devDependencies": {
     "babel-jest": "16.0.0",
